--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/mobilefacenet.tflite
-    - assets/man.png
     - assets/images/
     - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
