--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   path_provider: ^2.0.7
   tflite_flutter: ^0.9.0
   shared_preferences: ^2.1.0
-  change_app_package_name: ^1.1.0
   dio: ^4.0.0
   connectivity: ^3.0.6
   flutter_spinkit: ^5.0.0
@@ -46,6 +45,7 @@ dependencies:
   package_info_plus: ^1.4.2
   google_maps_flutter: ^2.1.8
   flutter_udid: ^2.0.0
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
